// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item renders correctly when completed 1`] = `
<body>
  <div>
    <li
      class="flex justify-between gap-x-6 px-5 py-5 hover:bg-gray-100 hover:cursor-pointer"
      data-testid="list-item-"
    >
      <label
        class="flex justify-between w-full hover:cursor-pointer"
        data-testid="list-item-label-"
      >
        <div
          class="flex min-w-0 gap-x-4"
        >
          <input
            checked=""
            class="mr-2 leading-tight"
            type="checkbox"
          />
          <div
            class="min-w-0 flex-auto"
          >
            <p
              class="text-sm font-semibold leading-6 text-gray-900 line-through"
            >
              test
            </p>
            <p
              class="mt-1 truncate text-xs leading-5 text-gray-500"
            >
              Finished at 6/4/2024, 6:21:01 PM
            </p>
          </div>
        </div>
        <div
          class="hidden shrink-0 sm:flex sm:flex-col sm:items-end justify-center"
        >
          <div
            class="mt-1 flex items-center gap-x-1.5"
          >
            <div
              class="flex-none rounded-full bg-emerald-500/50 p-1"
            >
              <div
                class="h-5 w-5 rounded-full bg-emerald-500/50"
              />
            </div>
            <p
              class="text-xs leading-5 text-gray-500"
            >
              completed
            </p>
          </div>
        </div>
      </label>
    </li>
  </div>
</body>
`;

exports[`Item renders correctly when incomplete 1`] = `
<body>
  <div>
    <li
      class="flex justify-between gap-x-6 px-5 py-5 hover:bg-gray-100 hover:cursor-pointer"
      data-testid="list-item-"
    >
      <label
        class="flex justify-between w-full hover:cursor-pointer"
        data-testid="list-item-label-"
      >
        <div
          class="flex min-w-0 gap-x-4"
        >
          <input
            class="mr-2 leading-tight"
            type="checkbox"
          />
          <div
            class="min-w-0 flex-auto"
          >
            <p
              class="text-sm font-semibold leading-6 text-gray-900 false"
            >
              test
            </p>
            <p
              class="mt-1 truncate text-xs leading-5 text-gray-500"
            >
              Created at 6/4/2024, 6:21:01 PM
            </p>
          </div>
        </div>
        <div
          class="hidden shrink-0 sm:flex sm:flex-col sm:items-end justify-center"
        >
          <div
            class="mt-1 flex items-center gap-x-1.5"
          >
            <div
              class="flex-none rounded-full bg-rose-700/50 p-1"
            >
              <div
                class="h-5 w-5 rounded-full bg-rose-700/50"
              />
            </div>
            <p
              class="text-xs leading-5 text-gray-500"
            >
              incomplete
            </p>
          </div>
        </div>
      </label>
    </li>
  </div>
</body>
`;
